fix(components): prevent icons to flicker/resize after first render

--- a/packages/swirl-components/src/components/swirl-button/swirl-button.css
+++ b/packages/swirl-components/src/components/swirl-button/swirl-button.css
@@ -177,9 +177,9 @@
   }
 
   &.button--pressed {
+    color: var(--s-text-highlight);
     box-shadow: inset 0 0 0 var(--s-border-width-default)
       var(--s-border-highlight);
-    color: var(--s-text-highlight);
 
     & .button__icon {
       color: var(--s-icon-highlight);
@@ -419,9 +419,16 @@
 
 .button__icon {
   display: none;
+  width: 1.5rem;
+  height: 1.5rem;
   margin-left: calc(-1 * var(--s-space-4));
   color: var(--s-icon-default);
   order: 0;
+
+  @media (--from-desktop-without-touch) {
+    width: 1.25rem;
+    height: 1.25rem;
+  }
 }
 
 .button__label {
