--- a/packages/swirl-components/src/components/swirl-icon/swirl-icon.css
+++ b/packages/swirl-components/src/components/swirl-icon/swirl-icon.css
@@ -1,3 +1,10 @@
 :host {
   display: inline-flex;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.swirl-icon {
+  max-width: 100%;
+  max-height: 100%;
 }
