--- a/packages/swirl-components/src/components/swirl-inline-error/swirl-inline-error.css
+++ b/packages/swirl-components/src/components/swirl-inline-error/swirl-inline-error.css
@@ -23,7 +23,9 @@
   font-size: var(--s-font-size-sm);
 
   & .inline-error__icon {
-    padding-top: 0.125rem;
+    width: 1rem;
+    height: 1rem;
+    margin-top: 0.125rem;
   }
 
   & .inline-error__message {
@@ -33,8 +35,15 @@
 
 .inline-error__icon {
   display: inline-flex;
+  width: 1.5rem;
+  height: 1.5rem;
   color: var(--s-icon-critical);
   align-self: flex-start;
+
+  @media (--from-desktop-without-touch) {
+    width: 1.25rem;
+    height: 1.25rem;
+  }
 }
 
 .inline-error__message {
