--- a/packages/swirl-components/src/components/swirl-search/swirl-search.css
+++ b/packages/swirl-components/src/components/swirl-search/swirl-search.css
@@ -41,8 +41,15 @@
   top: 50%;
   left: var(--s-space-12);
   display: inline-flex;
+  width: 1.5rem;
+  height: 1.5rem;
   color: var(--s-icon-default);
   transform: translateY(-50%);
+
+  @media (--from-desktop-without-touch) {
+    width: 1.25rem;
+    height: 1.25rem;
+  }
 }
 
 .search__input {
